Fixes to spelling errors, spacing and capitalizations

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,7 +2,6 @@
   margin-top: 1rem;
   background:rgba(225, 225, 225, .8);
   bottom: 0;
-  height: 10rem;
+  height: 8rem;
   width: 100%;
-  zIndex:-400;
 }
